# Object-R-3D

./: .gitignore  CMakeLists.txt  README.md  main.cpp
engine/: Engine.h
engine/camera/: Camera.h
engine/object/: Object.h  ObjectLoader.h
engine/renderer/: Renderer.h
engine/scene/: Scene.h
engine/scene/camera/: Camera.h
engine/scene/light/: AmbientLight.h  DiffuseLight.h  DirectionalLight.h  Light.h  SpecularLight.h
engine/scene/object/: Material.h  Object.h  ObjectLoader.h  Texture.h
engine/scene/object/primitives/: Line.h  Polygon.h
engine/scene/object/primitives2/: Line2D.h  Pixel.h  Point2D.h
engine/scene/object/primitives3/: Line.h  Plane.h  Polygon.h  Vertex.h
engine/utils/: Color.h  EulerAngle.h  Matrix4.h  Polygon.h  Triangle2D.h  Vector3.h  Vector4.h
objects/cube/: material.mtl
objects/head/: material.mtl
objects/mol/: molecula.mtl
objects/molecule/: material.mtl
objects/sphere/: material.mtl
objects/sphere-b/: material.mtl
objects/sphere-g/: material.mtl
objects/sphere-i0/: material.mtl
objects/sphere-i1/: material.mtl
objects/sphere-r/: material.mtl
src/engine/: Engine3D.h
src/utils/: Math3D.h
